--- a/.github/workflows/tslint-preset.yml
+++ b/.github/workflows/tslint-preset.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   job:
     runs-on: ubuntu-latest
-    container: node:lts
+    container: node:12
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v1
