--- a/commitlint-preset/package.json
+++ b/commitlint-preset/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@prescott/commitlint-preset",
+  "name": "@catchfashion/commitlint-preset",
   "private": false,
   "publishConfig": {
     "access": "public"
   },
   "version": "1.0.2",
-  "description": "commitlint rules for personal projects.",
+  "description": "commitlint rules for catchfashion projects.",
   "main": "commitlint.json",
   "files": [
     "commitlint.json"
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mooyoul/node-standard.git"
+    "url": "git+https://github.com/catchfashion/node-standard.git"
   },
   "keywords": [
     "commitlint"
@@ -23,16 +23,16 @@
   "author": "MooYeol Prescott Lee <mooyoul@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mooyoul/node-standard/issues"
+    "url": "https://github.com/catchfashion/node-standard/issues"
   },
-  "homepage": "https://github.com/mooyoul/node-standard#readme",
+  "homepage": "https://github.com/catchfashion/node-standard#readme",
   "dependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "cz-conventional-changelog": "^3.1.0"
   },
   "devDependencies": {
-    "@prescott/semantic-release-config": "1.0.1",
+    "@catchfashion/semantic-release-config": "1.0.1",
     "semantic-release-commit-filter": "1.0.2"
   }
 }
