--- a/tslint-preset/package.json
+++ b/tslint-preset/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@prescott/tslint-preset",
+  "name": "@catchfashion/tslint-preset",
   "version": "1.0.1",
-  "description": "A common TSLint preset for personal TypeScript projects",
+  "description": "A common TSLint preset for catchfashion TypeScript projects",
   "private": false,
   "publishConfig": {
     "access": "public"
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mooyoul/node-standard.git"
+    "url": "git+https://github.com/catchfashion/node-standard.git"
   },
   "keywords": [
     "tslint",
@@ -21,15 +21,15 @@
   "author": "MooYeol Prescott Lee <mooyoul@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mooyoul/node-standard/issues"
+    "url": "https://github.com/catchfashion/node-standard/issues"
   },
-  "homepage": "https://github.com/mooyoul/node-standard#readme",
+  "homepage": "https://github.com/catchfashion/node-standard#readme",
   "peerDependencies": {
     "tslint": "^6.0.0",
     "typescript": "^3.0.0 || ^4.0.0"
   },
   "devDependencies": {
-    "@prescott/semantic-release-config": "1.0.1",
+    "@catchfashion/semantic-release-config": "1.0.1",
     "semantic-release-commit-filter": "1.0.2"
   }
 }
